<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <include android:id="@+id/main_toolbar"
        layout="@layout/toolbar"></include>
    <TextView
        android:id="@+id/username_text"
        android:layout_below="@id/main_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_text"
        android:textSize="20dp"
        android:layout_alignBaseline="@+id/username"
        />
    <EditText
        android:id="@+id/username"
        android:layout_below="@id/main_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_toRightOf="@id/username_text"
        android:layout_alignParentRight="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        android:textSize="20dp"
        android:layout_below="@+id/username_text"
        android:layout_alignBaseline="@+id/password"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:layout_alignParentRight="true"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/password"
        android:onClick="login"/>

</RelativeLayout>
