<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView
        android:id="@+id/question_list_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/question_id"/>
    <TextView
        android:id="@+id/questionId"
        android:layout_toRightOf="@id/question_list_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/question_list_title"
        android:layout_below="@id/questionId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/question_title"/>
    <TextView
        android:id="@+id/questionTitle"
        android:layout_below="@id/questionId"
        android:layout_toRightOf="@id/question_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/question_list_description"
        android:layout_below="@id/questionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/question_description"/>
    <TextView
        android:id="@+id/questionDescription"
        android:layout_below="@id/questionTitle"
        android:layout_toRightOf="@id/question_list_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/question_list_difficulty"
        android:layout_below="@id/questionDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/question_difficulty"/>
    <TextView
        android:id="@+id/questionDifficulty"
        android:layout_below="@id/questionDescription"
        android:layout_toRightOf="@id/question_list_difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/question_list_gitUrl"
        android:layout_below="@id/questionDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/question_gitUrl"/>
    <TextView
        android:id="@+id/questionGitUrl"
        android:layout_below="@id/questionDifficulty"
        android:layout_toRightOf="@id/question_list_gitUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/question_list_type"
        android:layout_below="@id/questionGitUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/question_type"/>
    <TextView
        android:id="@+id/questionType"
        android:layout_below="@id/questionGitUrl"
        android:layout_toRightOf="@id/question_list_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/question_creator"
        android:layout_below="@id/questionType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/question_creator"
        />
    <TextView
        android:id="@+id/question_creator_id"
        android:layout_below="@id/questionType"
        android:layout_toRightOf="@id/question_creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/question_creator_id"
        />
    <TextView
        android:id="@+id/questionCreatorId"
        android:layout_below="@id/questionType"
        android:layout_toRightOf="@id/question_creator_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/question_creator_username"
        android:layout_below="@id/questionCreatorId"
        android:layout_alignLeft="@id/question_creator_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/question_creator_username"
        />
    <TextView
        android:id="@+id/questionCreatorUsername"
        android:layout_below="@id/questionCreatorId"
        android:layout_toRightOf="@id/question_creator_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/question_creator_name"
        android:layout_below="@id/questionCreatorUsername"
        android:layout_alignLeft="@id/question_creator_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/question_creator_name"
        />
    <TextView
        android:id="@+id/questionCreatorName"
        android:layout_below="@id/questionCreatorUsername"
        android:layout_toRightOf="@id/question_creator_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/question_creator_type"
        android:layout_below="@id/questionCreatorName"
        android:layout_alignLeft="@id/question_creator_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/question_creator_type"
        />
    <TextView
        android:id="@+id/questionCreatorType"
        android:layout_below="@id/questionCreatorName"
        android:layout_toRightOf="@id/question_creator_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/question_creator_avatar"
        android:layout_below="@id/questionCreatorType"
        android:layout_alignLeft="@id/question_creator_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/question_creator_avatar"
        />
    <TextView
        android:id="@+id/questionCreatorAvatar"
        android:layout_below="@id/questionCreatorType"
        android:layout_toRightOf="@id/question_creator_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/question_creator_gender"
        android:layout_below="@id/questionCreatorAvatar"
        android:layout_alignLeft="@id/question_creator_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/question_creator_gender"
        />
    <TextView
        android:id="@+id/questionCreatorGender"
        android:layout_below="@id/questionCreatorAvatar"
        android:layout_toRightOf="@id/question_creator_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/question_creator_email"
        android:layout_below="@id/questionCreatorGender"
        android:layout_alignLeft="@id/question_creator_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/question_creator_email"
        />
    <TextView
        android:id="@+id/questionCreatorEmail"
        android:layout_below="@id/questionCreatorGender"
        android:layout_toRightOf="@id/question_creator_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/question_creator_schoolId"
        android:layout_below="@id/questionCreatorEmail"
        android:layout_alignLeft="@id/question_creator_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/question_creator_schoolId"
        />
    <TextView
        android:id="@+id/questionCreatorSchoolId"
        android:layout_below="@id/questionCreatorEmail"
        android:layout_toRightOf="@id/question_creator_schoolId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />

    <TextView
        android:id="@+id/question_list_duration"
        android:layout_below="@id/questionCreatorSchoolId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/question_duration"/>
    <TextView
        android:id="@+id/questionDuration"
        android:layout_below="@id/questionCreatorSchoolId"
        android:layout_toRightOf="@id/question_list_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/question_list_link"
        android:layout_below="@id/questionDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/question_link"/>
    <TextView
        android:id="@+id/questionLink"
        android:layout_below="@id/questionDuration"
        android:layout_toRightOf="@id/question_list_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/question_list_knowledgeVos"
        android:layout_below="@id/questionLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/question_knowledgeVos"/>
    <TextView
        android:id="@+id/questionKnowledgeVos"
        android:layout_below="@id/questionLink"
        android:layout_toRightOf="@id/question_list_knowledgeVos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/question_list_readme"
        android:layout_below="@id/questionKnowledgeVos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/question_readme"/>
    <TextView
        android:id="@+id/questionReadme"
        android:layout_below="@id/questionKnowledgeVos"
        android:layout_toRightOf="@id/question_list_readme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
</RelativeLayout>