<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TextView
        android:id="@+id/student_dialog_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/student_id"/>
    <TextView
        android:id="@+id/student_id"
        android:layout_toRightOf="@id/student_dialog_id"
        android:layout_width="match_parent"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/student_dialog_number"
        android:layout_below="@id/student_dialog_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/student_number"/>
    <TextView
        android:id="@+id/student_number"
        android:layout_below="@id/student_id"
        android:layout_toRightOf="@id/student_dialog_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/student_dialog_name"
        android:layout_below="@id/student_dialog_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/student_name"/>
    <TextView
        android:id="@+id/student_name"
        android:layout_below="@id/student_number"
        android:layout_toRightOf="@id/student_dialog_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/student_dialog_type"
        android:layout_below="@id/student_dialog_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/student_type"/>
    <TextView
        android:id="@+id/student_type"
        android:layout_below="@id/student_name"
        android:layout_toRightOf="@id/student_dialog_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/student_dialog_avatar"
        android:layout_below="@id/student_dialog_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/student_avatar"/>
    <TextView
        android:id="@+id/student_avatar"
        android:layout_below="@id/student_type"
        android:layout_toRightOf="@id/student_dialog_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/student_dialog_gender"
        android:layout_below="@id/student_dialog_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/student_gender"/>
    <TextView
        android:id="@+id/student_gender"
        android:layout_below="@id/student_avatar"
        android:layout_toRightOf="@id/student_dialog_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/student_dialog_email"
        android:layout_below="@id/student_dialog_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/student_email"/>
    <TextView
        android:id="@+id/student_email"
        android:layout_below="@id/student_gender"
        android:layout_toRightOf="@id/student_dialog_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/student_dialog_schoolId"
        android:layout_below="@id/student_dialog_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/student_schoolId"/>
    <TextView
        android:id="@+id/student_schoolId"
        android:layout_below="@id/student_email"
        android:layout_toRightOf="@id/student_dialog_schoolId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/student_dialog_gitId"
        android:layout_below="@id/student_dialog_schoolId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/student_gitId"/>
    <TextView
        android:id="@+id/student_gitId"
        android:layout_below="@id/student_schoolId"
        android:layout_toRightOf="@id/student_dialog_gitId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/student_dialog_groupId"
        android:layout_below="@id/student_dialog_gitId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/student_groupId"/>
    <TextView
        android:id="@+id/student_groupId"
        android:layout_below="@id/student_gitId"
        android:layout_toRightOf="@id/student_dialog_groupId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/student_dialog_gitUsername"
        android:layout_below="@id/student_dialog_groupId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/student_gitUsername"/>
    <TextView
        android:id="@+id/student_gitUsername"
        android:layout_below="@id/student_groupId"
        android:layout_toRightOf="@id/student_dialog_gitUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />

</RelativeLayout>