<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/exam_list_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/exam_id"/>
    <TextView
        android:id="@+id/examId"
        android:layout_toRightOf="@id/exam_list_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/exam_list_title"
        android:layout_below="@id/exam_list_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/exam_title"/>
    <TextView
        android:id="@+id/examTitle"
        android:layout_below="@id/examId"
        android:layout_toRightOf="@id/exam_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/exam_list_description"
        android:layout_below="@id/exam_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/exam_description"/>
    <TextView
        android:id="@+id/examDescription"
        android:layout_below="@id/examTitle"
        android:layout_toRightOf="@id/exam_list_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/exam_list_startAt"
        android:layout_below="@id/exam_list_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/exam_start"/>
    <TextView
        android:id="@+id/examStartAt"
        android:layout_below="@id/examDescription"
        android:layout_toRightOf="@id/exam_list_startAt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/exam_list_endAt"
        android:layout_below="@id/exam_list_startAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/exam_end"/>
    <TextView
        android:id="@+id/examEndAt"
        android:layout_below="@id/examStartAt"
        android:layout_toRightOf="@id/exam_list_endAt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/exam_list_course"
        android:layout_below="@id/exam_list_endAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/exam_course"/>
    <TextView
        android:id="@+id/examCourse"
        android:layout_below="@id/examEndAt"
        android:layout_toRightOf="@id/exam_list_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/exam_list_status"
        android:layout_below="@id/exam_list_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/exam_status"/>
    <TextView
        android:id="@+id/examStatus"
        android:layout_below="@id/examCourse"
        android:layout_toRightOf="@id/exam_list_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/exam_list_currentTime"
        android:layout_below="@id/exam_list_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/exam_currentTime"/>
    <TextView
        android:id="@+id/examCurrentTime"
        android:layout_below="@id/examStatus"
        android:layout_toRightOf="@id/exam_list_currentTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
</RelativeLayout>