<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView
        android:id="@+id/student_list_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/student_id"/>
    <TextView
        android:id="@+id/studentId"
        android:layout_toRightOf="@id/student_list_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/student_list_name"
        android:layout_below="@id/student_list_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/student_name"/>
    <TextView
        android:id="@+id/studentName"
        android:layout_below="@id/studentId"
        android:layout_toRightOf="@id/student_list_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/student_list_number"
        android:layout_below="@id/student_list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/student_number"/>
    <TextView
        android:id="@+id/studentNumber"
        android:layout_below="@id/studentName"
        android:layout_toRightOf="@id/student_list_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
    android:id="@+id/student_list_score"
    android:layout_below="@id/student_list_number"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceListItem"
    android:text="@string/student_score"/>
    <TextView
        android:id="@+id/studentScore"
        android:layout_below="@id/studentNumber"
        android:layout_toRightOf="@id/student_list_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/student_list_scored"
        android:layout_below="@id/student_list_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/student_scored"/>
    <TextView
        android:id="@+id/studentScored"
        android:layout_below="@id/studentScore"
        android:layout_toRightOf="@id/student_list_scored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />
</RelativeLayout>